<resources>
    <string name="app_name">Lifestyle-Scoring-App</string>

    <string name="cat" translatable="false">Katze</string>
    <string name="cockatoo" translatable="false">Kakadu</string>
    <string name="pony" translatable="false">Pony</string>
    <string name="dog" translatable="false">Hund</string>
    <string name="motorcycle" translatable="false">Roller</string>
    <string name="convertible" translatable="false">Cabrio</string>
    <string name="vintagecar" translatable="false">Oldtimer</string>
    <string name="suv" translatable="false">SUV</string>
    <string name="sportscar" translatable="false">Sportwagen</string>
    <string name="swimming" translatable="false">Schwimmen</string>
    <string name="running" translatable="false">Laufen</string>
    <string name="cycling" translatable="false">Radfahren</string>
    <string name="rowing" translatable="false">Rudern</string>
    <string name="treehouse" translatable="false">Baumhaus</string>
    <string name="villa" translatable="false">Stadtvilla</string>
    <string name="beachhouse" translatable="false">Strandhaus</string>
    <string name="residentaltower" translatable="false">Wohnturm</string>
    <string name="countryhouse" translatable="false">Landhaus</string>
    <string name="houseboat" translatable="false">Hausboot</string>
    <string name="manorhouse" translatable="false">Herrenhaus</string>
    <string name="constructiontrailer" translatable="false">Bauwagen</string>
    <string name="manager" translatable="false">Manager</string>
    <string name="managerin" translatable="false">Managerin</string>
    <string name="personaltrainer" translatable="false">Trainerin</string>
    <string name="carsalesman" translatable="false">Autohändler</string>
    <string name="vet" translatable="false">Tierärztin</string>
    <string name="realestateagent" translatable="false">Makler</string>
    <string name="liebe" translatable="false">Liebe</string>

    <string name="job_love">Job Love</string>
    <string name="realestate_love">Real Estate Love</string>
    <string name="car_love">Car Love</string>
    <string name="animal_love">Animal Love</string>

    <string name="how_many_points">How many points does the card have?</string>
    <string name="what_type_of_love">What type of love is it?</string>
    <string name="scan_card">Scan Card</string>
    <string name="points">Points: %1$s</string>
    <string name="playerPoints">%1$s Points</string>
    <string name="only_card_names_are_important">Only card names are important</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning…</string>

    <string name="game_rules">Game rules</string>
    <string name="calculate_points">Calculate points</string>

    <string name="enter_player_name">Enter player name</string>
    <string name="ok">OK</string>
    <string name="abort">Abort</string>

    <string name="player_list">List of players</string>
    <string name="settings">Settings</string>

    <string name="no_players">No players.</string>
    <string name="add_new_player">Add a new player.</string>
    <string name="back_to_home">Back to home screen</string>

    <string name="privacy_policy">
\n\n
## Privacy Policy for Lifestyle-Socring-App
\n\n
Last updated: 16.11.2023
\n\n
I highly value the protection of your data and your privacy. This Privacy Policy informs you about how we handle your personal data when you use our Lifestyle-Socring-App.
\n\n
**1. Data Controller**
   Responsible for data processing is:
\n\n
Jens Münker\n
E-Mail: frosch2040@gmail.com
\n\n
**2. Data Collection**
   I collect and process only the data necessary for the functionality of the Lifestyle-Socring-App. This includes exclusively:
\n\n
- Camera Access: The app requires access to the camera to scan cards of a card game.
\n\n
**3. Use of Data**
   The collected data is used exclusively for the specified purpose, namely to provide the functionalities of the Lifestyle-Socring-App. There is no analysis or disclosure of data to third parties.
\n\n
**4. Data Storage**
   The captured data is stored locally on your device and not on our servers. The data is deleted as soon as the card is recognized.
\n\n
**5. Data Sharing**
   As I do not collect personal data, there is no sharing of such data with third parties.
\n\n
**6. User Rights**
   You have the right to information about the data stored about you. Furthermore, you have the right to correction, deletion, or blocking of incorrect data. Please contact me using the contact details provided in Section 1.
\n\n
**7. Changes to this Privacy Policy**
   I reserve the right to update this Privacy Policy as needed. The latest version is available on the [GitHub page](https://github.com/jens-muenker/Lifestyle-Scoring-App) for this app.
\n\n
**8. Contact**
   For questions or concerns regarding this Privacy Policy, you can contact us at frosch2040@gmail.com.
    </string>

</resources>