<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="?colorPrimary"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:elevation="2dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            android:paddingEnd="16dp"
            android:paddingStart="0dp">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_back"
                app:tint="?colorOnPrimary"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/back_to_home"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_list"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:textColor="?colorOnPrimary"
                android:textSize="22sp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="end" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:paddingBottom="100dp"/>

        <TextView
            android:id="@+id/txtNoPlayers"
            style="@style/FontSizeMedium"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/no_players"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="339dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_add_person"
            android:contentDescription="@string/add_new_player"/>

    </RelativeLayout>

</layout>